--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: pull_request
 
 jobs:
-  Continuous=Integration:
+  Continuous_Integration:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
