Corrigindo o CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,13 @@ jobs:
   Continuous_Integration:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+      - name: Baixar o repositório
+        uses: actions/checkout@v4
 
-      - name: Set up python
-        id: setup-python
-        uses: action/setup-python@v4
+      - name: Instalar o Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: 3.12.8
 
       - name: Instalar o Poetry via pip
         run: pip install poetry
