--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[tool.poetry]
+[project]
 name = "projeto-api"
 version = "0.1.0"
 description = ""
@@ -20,7 +20,8 @@ dependencies = [
     "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "pydantic (>=2.11.4,<3.0.0)"
 ]
 
 
